Enhanced the contact icons

--- a/index.html
+++ b/index.html
@@ -382,30 +382,30 @@
 		</div>
 		<hr>
 
-		<div>
+		<div class="ConnectMessage">
 			<p>Let's Connect. I prefer <a href="https://www.linkedin.com/in/irishirajj">LinkedIn messages</a> and <a href="https://twitter.com/irishirajj">Twitter DMs.</a></p>
 		</div>
 
 
 		<div class="ContactIcons" >
-			<ul class="ContactList" >
-				<li class="align-self-center col-6 col-md-4 col-lg-3 my-3">
+			<ul class="ContactList justify-content-center"   >
+				<li class="align-self-center col-3 ">
 					<a href="https://twitter.com/irishirajj" target="_blank">
-						<i class="fab fa-twitter-square fa-5x"></i>
+						<i class="fab fa-twitter-square fa-8x"></i>
 						<!--twitter.com/irishirajj-->
 					</a>
 				</li>
 
-				<li class="align-self-center col-6 col-md-4 col-lg-3 my-3">
+				<li class="align-self-center col-3  ">
 					<a href="https://www.linkedin.com/in/irishirajj" target="_blank">
-						<i class="fab fa-linkedin fa-5x"></i>
+						<i class="fab fa-linkedin fa-8x"></i>
 						<!--www.linkedin.com/in/irishirajj-->
 					</a>
 				</li>
 
-				<li class="align-self-center col-6 col-md-4 col-lg-3 my-3">
+				<li class="align-self-center col-3  ">
 					<a href="mailto:rishiraj.mec18@gmail.com" target="_blank">
-						<i class="fas fa-envelope-square fa-5x"></i>
+						<i class="fas fa-envelope-square fa-8x"></i>
 						<!--rishiraj.mec18@gmail.com-->
 					</a>
 				</li>
