Styled the connect section icons

--- a/index.html
+++ b/index.html
@@ -387,29 +387,29 @@
 		</div>
 
 
-		<div class="ContactIcons" >
-			<ul class="ContactList justify-content-center"   >
-				<li class="align-self-center col-3 ">
+		<div class="ContactLinks justify-content-center" >
+		<!--	<ul class="ContactList justify-content-center"   >
+				<li class="align-self-center col-3 ">-->
 					<a href="https://twitter.com/irishirajj" target="_blank">
-						<i class="fab fa-twitter-square fa-8x"></i>
+						<i class="ContactIcons fab fa-twitter-square fa-8x mx-4"></i>
 						<!--twitter.com/irishirajj-->
 					</a>
-				</li>
+			<!--	</li>
 
-				<li class="align-self-center col-3  ">
+				<li class="align-self-center col-3  ">-->
 					<a href="https://www.linkedin.com/in/irishirajj" target="_blank">
-						<i class="fab fa-linkedin fa-8x"></i>
+						<i class="ContactIcons fab fa-linkedin fa-8x mx-4"></i>
 						<!--www.linkedin.com/in/irishirajj-->
 					</a>
-				</li>
+			<!--	</li>
 
-				<li class="align-self-center col-3  ">
+				<li class="align-self-center col-3  ">-->
 					<a href="mailto:rishiraj.mec18@gmail.com" target="_blank">
-						<i class="fas fa-envelope-square fa-8x"></i>
+						<i class="ContactIcons fas fa-envelope-square fa-8x mx-4"></i>
 						<!--rishiraj.mec18@gmail.com-->
 					</a>
-				</li>
-			</ul>
+			<!--	</li>
+			</ul>-->
 		</div>
 
 
