--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 		<hr>
 
 		<div class="ConnectMessage">
-			<p>Let's Connect. I prefer <a href="https://www.linkedin.com/in/irishirajj">LinkedIn messages</a> and <a href="https://twitter.com/irishirajj">Twitter DMs.</a></p>
+			<p>Let's Connect. I prefer <!-- <a href="https://www.linkedin.com/in/irishirajj">LinkedIn messages</a> and --><a href="https://twitter.com/irishirajj">Twitter DMs.</a></p>
 		</div>
 
 
@@ -393,6 +393,10 @@
 					<a href="https://twitter.com/irishirajj" target="_blank">
 						<i class="ContactIcons fab fa-twitter-square fa-8x mx-2"></i>
 						<!--twitter.com/irishirajj-->
+
+
+		<div class="ContactLinks justify-content-center" >
+		<!--	<ul class="ContactList justify-content-center"   >
 					</a>
 			<!--	</li>
 
