--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
 		<hr>
 
 
-		<div class="school">
+		<!--<div class="school">
 			<h4>Indian Institute of Technology Varanasi (IIT-BHU)</h4>
 			<span>Jul 2018 - Current</span>
 			<h5>B.Tech + M.Tech- Mechanical Engineering</h5>
 			<i class="fas fa-map-marker-alt"></i>
 			<span>Varanasi</span>
-		</div>
+		</div>-->
 
 		<div class="school">
 			<h4>Manas International Public School</h4>
