--- a/index.html
+++ b/index.html
@@ -401,8 +401,8 @@
 			<!--	</li>
 
 				<li class="align-self-center col-3  ">-->
-					<!--<a href="https://www.linkedin.com/in/irishirajj" target="_blank">
-						<i class="ContactIcons fab fa-linkedin fa-8x mx-2"></i>-->
+					<a href="https://www.linkedin.com/in/irishirajj" target="_blank">
+						<i class="ContactIcons fab fa-linkedin fa-8x mx-2"></i>
 						<!--www.linkedin.com/in/irishirajj-->
 					</a>
 			<!--	</li>
