--- a/index.html
+++ b/index.html
@@ -388,32 +388,27 @@
 
 
 		<div class="ContactLinks justify-content-center" >
-		<!--	<ul class="ContactList justify-content-center"   >
+		
+			
 				<li class="align-self-center col-3 ">-->
 					<a href="https://twitter.com/irishirajj" target="_blank">
 						<i class="ContactIcons fab fa-twitter-square fa-8x mx-2"></i>
 						<!--twitter.com/irishirajj-->
-
-
-		<div class="ContactLinks justify-content-center" >
-		<!--	<ul class="ContactList justify-content-center"   >
 					</a>
-			<!--	</li>
-
-				<li class="align-self-center col-3  ">-->
+			
+				<li class="align-self-center col-3  ">
 					<a href="https://www.linkedin.com/in/irishirajj" target="_blank">
 						<i class="ContactIcons fab fa-linkedin fa-8x mx-2"></i>
 						<!--www.linkedin.com/in/irishirajj-->
 					</a>
-			<!--	</li>
-
-				<li class="align-self-center col-3  ">-->
+			
+				<li class="align-self-center col-3  ">
 					<a href="mailto:rishiraj.mec18@gmail.com" target="_blank">
 						<i class="ContactIcons fas fa-envelope-square fa-8x mx-2"></i>
 						<!--rishiraj.mec18@gmail.com-->
 					</a>
-			<!--	</li>
-			</ul>-->
+			
+			
 		</div>
 
 
